After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706620 - smartcard: ignore softtoken
smartcard: ignore softtoken
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: smartcard
unspecified
Other All
: Normal normal
: ---
Assigned To: Ray Strode [halfline]
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-08-22 21:54 UTC by Ray Strode [halfline]
Modified: 2013-08-22 22:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
smartcard: ignore softtoken (2.27 KB, patch)
2013-08-22 21:55 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2013-08-22 21:54:58 UTC
For some reason that I haven't fully fleshed out, sometimes
the soft token gets into the "will load list" and then havoc
ensues.

This commit fixes that by explicitly ignoring built-in modules.
Comment 1 Ray Strode [halfline] 2013-08-22 21:55:00 UTC
Created attachment 252808 [details] [review]
smartcard: ignore softtoken
Comment 2 Ray Strode [halfline] 2013-08-22 22:01:13 UTC
Attachment 252808 [details] pushed as a61d4a1 - smartcard: ignore softtoken