smartcard: ignore softtoken

For some reason that I haven't fully fleshed out, sometimes
the soft token gets into the "will load list" and then havoc
ensues.

This commit fixes that by explicitly ignoring built-in modules.

https://bugzilla.gnome.org/show_bug.cgi?id=706620